// file: proto/gcommon/v1/common/event_notification.proto
// version: 1.2.0
// guid: d1e2f3g4-h5i6-7890-j1k2-l3m4n5o6p7q8

edition = "2023";

package common.v1;

import "common/v1/notification_message.proto";
import "google/protobuf/any.proto";
import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/common/";

/**
 * Notification generated from an event.
 */
message EventNotification {
  // Associated event identifier
  string event_id = 1 [(buf.validate.field).string.min_len = 1];

  // Event type or name
  string event_type = 2 [(buf.validate.field).string.min_len = 1];

  // Event payload data
  google.protobuf.Any event_payload = 3 [lazy = true];

  // Notification details
  NotificationMessage notification = 4 [lazy = true];

  // Time the event occurred
  google.protobuf.Timestamp event_time = 5 [lazy = true];
}
