// file: proto/gcommon/v1/common/get_template_response.proto
// version: 1.2.0
// guid: 525e0a4f-3e9f-4b1a-8d33-fa9c295964a0

edition = "2023";

package gcommon.v1.common;

import "gcommon/v1/common/template.proto";
import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/v1/common";

/**
 * Response containing a requested notification template.
 */
message GetTemplateResponse {
  // Template data
  gcommon.v1.common.Template template = 1 [lazy = true];
}
